# RGBD-pipeline

MakeSrc/: CMakeLists.txt
MakeSrc/src/: helper.cpp  main.cpp  pl.cuh
out_fine/: kinect_130.xyz  kinect_142.xyz  kinect_145.xyz  kinect_147.xyz
src/: file  main.cpp  pl.cu  pl.h
src1/: file  helper.cpp  main.cpp  pl.cu
src2/: file  helper.cpp  main.cpp  pl.cu  pl.h
